--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <h1>Lava Jato</h1>
     </header>
     <main>
-        <form action="historico.html">
+        <form action="salvar_dados.php" method="post">
             <label for="data">Data:</label>
             <input type="date" id="data" name="data" required>
 
@@ -35,8 +35,8 @@
             <button type="submit">Salvar</button>
         </form>
         <div class="buttons-home">
-            <a href="historico.html" class="btn-home">Histórico</a>
-            <a href="fechamento.html" class="btn-home">Fechamento do Mês</a>
+            <a href="historico.php" class="btn-home">Histórico</a>
+            <a href="fechamento.php" class="btn-home">Fechamento do Mês</a>
         </div>
     </main>
     <footer>
